full screen, live demo, cleaned code.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="description" content="Procedural Terrain" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#212121" />
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <p>Procedural Terrain</p>
-
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"
